# CybersecurityML

./: .dockerignore  .env.example  .gitignore  DATA_DICTIONARY.md  Dockerfile  README.md  config.yaml  pyproject.toml
api/: app.py  models.py  routes.py
data/interim/: encoded.csv
data/processed/: features.csv  reduced.csv
deploy/: deploy.sh
exploration/analysis/: correlation.py  data_structure.py  data_vis.py
exploration/feature_engineering/: data_reduction.py  encoding.py  var_creation.py
exploration/ml_models/: ml_models.py  rf_gridsearch.py
reports/data/: data_structure.md  variables_visualization.md
reports/model_results/: 20260222_151426_53ec23.json  20260222_151718_e2647c.json  20260222_151901_f9214d.json  20260222_151935_536e89.json  20260222_152706_57e54a.json  20260222_152726_5beac0.json
reports/rf_results/: 20260222_155516_132c14.json  20260222_161957_a35f85.json  20260222_200647_c86508.json  20260222_210740_137347.json
scripts/: call_rest_api_sample_inference.py  run_local_inference.py
src/: config.py  inference.py  main.py  model_loading.py  preprocessing.py
tests/: conftest.py
tests/smoke/: test_api.py  test_pipeline.py
tests/unit/: test_preprocessing.py
training/: model_training.py
