[project]
name = "cybersecurityml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]